Add launch configuration and task definitions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,10 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"${workspaceFolder}/examples/dining_philosophers.big"
+			],
+			"preLaunchTask": "Build JSON Grammar"
 		}
 	]
 }
