--- a/syntaxes/bigrapher.tmLanguage.yaml
+++ b/syntaxes/bigrapher.tmLanguage.yaml
@@ -69,3 +69,5 @@ repository:
         match: "[A-Z][a-zA-Z0-9_-]*"
       - name: variable.other.readwrite.link-name.bigrapher
         match: "[a-z][a-zA-Z0-9_-]*"
+      - name: constant.numeric.bigrapher
+        match: "\\b\\d+\\b"
