--- a/syntaxes/bigrapher.tmLanguage.yaml
+++ b/syntaxes/bigrapher.tmLanguage.yaml
@@ -6,6 +6,7 @@ patterns:
   - include: "#brs-definition"
   - include: "#operators"
   - include: "#entities"
+  - include: "#strings"
 repository:
   comments:
     patterns:
@@ -33,8 +34,16 @@ repository:
           - name: keyword.control.predicates.brs.bigrapher
             match: "\\bpreds\\b"
           - include: "#comments"
+          - include: "#keywords"
+          - include: "#strings"
           - include: "#operators"
           - include: "#entities"
+  strings:
+    patterns:
+      - name: string.quoted.double.bigrapher
+        begin: "\""
+        end: "\""
+
   keywords:
     patterns:
       - name: keyword.control.control.bigrapher
@@ -53,6 +62,8 @@ repository:
             name: keyword.control.reaction-rule-definition.bigrapher
           2:
             name: variable.other.constant.reaction-rule-name.bigrapher
+      - match: "\\b(string|int|float)\\b"
+        name: storage.type.bigrapher
   operators:
     patterns:
       - name: keyword.operator.assignment.bigrapher
