--- a/syntaxes/bigrapher.tmLanguage.yaml
+++ b/syntaxes/bigrapher.tmLanguage.yaml
@@ -2,8 +2,12 @@ name: "Bigrapher"
 scopeName: "source.bigrapher"
 patterns:
   - include: "#comments"
-  - include: "#keywords"
+  - include: "#controls"
+  - include: "#control-definition"
+  - include: "#bigraph-definition"
+  - include: "#react-definition"
   - include: "#brs-definition"
+  - include: "#keywords"
   - include: "#operators"
   - include: "#entities"
   - include: "#strings"
@@ -13,6 +17,62 @@ repository:
       - name: comment.line.bigrapher
         begin: "#"
         end: $
+  control-definition:
+    patterns:
+      - match: "(atomic\\s+)?(ctrl)\\s+([A-Z][a-zA-Z0-9_-]*)\\s+=\\s+(\\d+);"
+        captures:
+          1:
+            name: keyword.control.atomic.bigrapher
+          2: 
+            name: keyword.control.control.bigrapher
+          3:
+            name: entity.name.class.control-name.bigrapher
+          4:
+            name: constant.numeric.bigrapher
+      - match: "(atomic\\s+)?(fun\\s+ctrl)\\s+([A-Z][a-zA-Z0-9_-]*)\\(([a-z][a-zA-Z0-9_-]*(?:\\s*,\\s*[a-z][a-zA-Z0-9_-]*)*)\\)\\s+=\\s+(\\d+);"
+        captures:
+          1:
+            name: entity.name.function.parameterized.atomic.bigrapher
+          2: 
+            name: entity.name.function.parameterized.control.bigrapher
+          3:
+            name: entity.name.class.control-name.bigrapher
+          4: 
+            name: variable.parameter.control-parameter.bigrapher
+          5:
+            name: constant.numeric.bigrapher
+  bigraph-definition:
+    patterns:
+      - match: "(big)\\s+([a-z][a-zA-Z0-9_-]*)"
+        captures: 
+          1: 
+            name: keyword.control.bigraph-definition.bigrapher
+          2:
+            name: variable.other.constant.bigraph-name.bigrapher
+      - match: "(fun\\s+big)\\s+([a-z][a-zA-Z0-9_-]*)\\(([a-z][a-zA-Z0-9_-]*(?:\\s*,\\s*[a-z][a-zA-Z0-9_-]*)*)\\)"
+        captures:
+          1:
+            name: entity.name.function.parameterized.bigraph-definition.bigrapher
+          2: 
+            name: variable.other.constant.bigraph-name.bigrapher
+          3:
+            name: variable.parameter.bigraph-parameter.bigrapher
+  react-definition:
+    patterns:
+      - match: "(react)\\s+([a-z][a-zA-Z0-9_-]*)"
+        captures: 
+          1: 
+            name: keyword.control.reaction-rule-definition.bigrapher
+          2:
+            name: variable.other.constant.reaction-rule-name.bigrapher
+      - match: "(fun\\s+react)\\s+([a-z][a-zA-Z0-9_-]*)\\(([a-z][a-zA-Z0-9_-]*(?:\\s*,\\s*[a-z][a-zA-Z0-9_-]*)*)\\)"
+        captures:
+          1:
+            name: entity.name.function.parameterized.reaction-rule-definition.bigrapher
+          2: 
+            name: variable.other.constant.reaction-rule-name.bigrapher
+          3:
+            name: variable.parameter.reaction-rule-parameter.bigrapher
   brs-definition:
     patterns:
       - name: meta.block.brs-definition.bigrapher
@@ -38,30 +98,8 @@ repository:
           - include: "#strings"
           - include: "#operators"
           - include: "#entities"
-  strings:
-    patterns:
-      - name: string.quoted.double.bigrapher
-        begin: "\""
-        end: "\""
-
   keywords:
     patterns:
-      - name: keyword.control.control.bigrapher
-        match: "(atomic\\s+)?ctrl"
-      - name: entity.name.function.parameterized.bigrapher
-        match: "fun"
-      - match: "(big)\\s+([a-z][a-zA-Z0-9_-]*)"
-        captures: 
-          1: 
-            name: keyword.control.bigraph-definition.bigrapher
-          2:
-            name: variable.other.constant.bigraph-name.bigrapher
-      - match: "(react)\\s+([a-z][a-zA-Z0-9_-]*)"
-        captures: 
-          1: 
-            name: keyword.control.reaction-rule-definition.bigrapher
-          2:
-            name: variable.other.constant.reaction-rule-name.bigrapher
       - match: "\\b(string|int|float)\\b"
         name: storage.type.bigrapher
   operators:
@@ -84,3 +122,6 @@ repository:
         match: "[a-z][a-zA-Z0-9_-]*"
       - name: constant.numeric.bigrapher
         match: "\\b\\d+\\b"
+      - name: string.quoted.double.bigrapher
+        begin: "\""
+        end: "\""
