--- a/syntaxes/bigrapher.tmLanguage.yaml
+++ b/syntaxes/bigrapher.tmLanguage.yaml
@@ -16,6 +16,15 @@ repository:
       - name: comment.line.bigrapher
         begin: "#"
         end: $
+  parameters:
+    patterns:
+    - name: meta.parameter.bigrapher
+      match: "\\(([a-z][a-zA-Z0-9_'-]*(?:\\s*,\\s*[a-z][a-zA-Z0-9_'-]*)*)\\)"
+      patterns:
+        - name: variable.parameter.bigrapher
+          match: "[a-z][a-zA-Z0-9_'-]*"
+        - name: punctuation.separator.parameter.bigrapher
+          match: ","
   control-definition:
     patterns:
       - name: meta.block.control-definition.bigrapher
@@ -48,6 +57,7 @@ repository:
             name: punctuation.terminator.parameterized-control-definition.bigrapher
         patterns:
           - include: "#comments"
+          - include: "#parameters"
           - include: "#keywords"
           - include: "#operators"
           - include: "#entities"
@@ -66,8 +76,8 @@ repository:
           "0":
             name: punctuation.terminator.bigraph-definition.bigrapher
         patterns:
-
           - include: "#comments"
+          - include: "#parameters"
           - include: "#keywords"
           - include: "#operators"
           - include: "#entities"
@@ -87,6 +97,7 @@ repository:
             name: punctuation.terminator.bigraph-definition.bigrapher
         patterns:
           - include: "#comments"
+          - include: "#parameters"
           - include: "#keywords"
           - include: "#operators"
           - include: "#entities"
@@ -106,6 +117,7 @@ repository:
             name: punctuation.terminator.reaction-rule-definition.bigrapher
         patterns:
           - include: "#comments"
+          - include: "#parameters"
           - include: "#keywords"
           - include: "#operators"
           - include: "#entities"
@@ -125,6 +137,7 @@ repository:
             name: punctuation.terminator.reaction-rule-definition.bigrapher
         patterns:
           - include: "#comments"
+          - include: "#parameters"
           - include: "#keywords"
           - include: "#operators"
           - include: "#entities"
@@ -152,6 +165,7 @@ repository:
           - name: keyword.control.actions.brs.bigrapher
             match: "\\bactions\\b"
           - include: "#comments"
+          - include: "#parameters"
           - include: "#keywords"
           - include: "#strings"
           - include: "#operators"
@@ -185,6 +199,8 @@ repository:
     patterns:
       - name: entity.name.class.control-name.bigrapher
         match: "[A-Z][a-zA-Z0-9_'-]*"
+        patterns:
+          - include: "#parameters"
       - name: variable.other.readwrite.link-name.bigrapher
         match: "[a-z][a-zA-Z0-9_'-]*"
       - name: constant.numeric.bigrapher
